--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chenwangji.github.io/recipe/",
   "dependencies": {
     "bootstrap": "^4.1.2",
     "nprogress": "^0.2.0",
@@ -15,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
