fix: change travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
-___
 language: node_js
-node_js: 8
+node_js: 
+  - "8"
 cache:
   directories:
     - "node_modules"
-install: npm install
-script: npm run deploy
+install: 
+  - npm install
+script: 
+  - npm run deploy
