--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
 - npm install
 script:
-- git config --global user.email "chenwangji@hebao.im"
+- git config --global user.email "694093637@qq.com"
 - git config --global user.name "chenwangji"
 - npm run deploy
 
