--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "node gh-pages"
+    "deploy": "node gh-pages.js"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
